--- a/public/index.html
+++ b/public/index.html
@@ -2,258 +2,273 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Portfolio by Allen Gordon</title>
+  <title>Portfolio by Allen Gordon</title>
 
-		<meta name="description" content="Software engineer portfolio of work"/>
-		<meta name="keywords" content="software engineer, chicago"/>
-		<meta name="author" content="trig010.com"/>
+  <meta name="description" content="Software engineer portfolio of work" />
+  <meta name="keywords" content="software engineer, chicago" />
+  <meta name="author" content="trig010.com" />
 
-		<link rel="shortcut icon" href="./img/favicon.ico">
+  <link rel="shortcut icon" href="./img/favicon.ico">
 
-		<link rel="stylesheet" type="text/css" href="./css/reset.css" />
-		<link rel="stylesheet" type="text/css" href="./css/style.css" />
-		<link rel="stylesheet" type="text/css" href="./css/style-responsive.css" />
+  <link rel="stylesheet" type="text/css" href="./css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style-responsive.css" />
 
 </head>
 
 <body>
 
 
-<div class="preloader" id="preloader">
+  <div class="preloader" id="preloader">
     <div class="item">
       <img src="./img/loading.gif">
     </div>
-</div>
+  </div>
 
 
-<div class="container">
+  <div class="container">
 
 
-<!-- section start-page -->
+    <!-- section start-page -->
 
-  <section class="start-page parallax-background" id="home">
+    <section class="start-page parallax-background" id="home">
 
-    <div class="opacity"></div> <!-- Opacity color -->
+      <div class="opacity"></div>
+      <!-- Opacity color -->
       <div class="content">
         <div class="text">
 
 
           <h1>ALLEN GORDON</h1>
           <h2>Fullstack Computer Engineer</h2>
-        <div><img class="start-page-logo" src="./img/brackets.png"></div>
-          <a href="#about-me"><div class="hover-button">About Me</div></a>
+          <div><img class="start-page-logo" src="./img/brackets.png"></div>
+          <a href="#about-me">
+            <div class="hover-button">About Me</div>
+          </a>
 
         </div>
 
         <div class="arrow-down"></div>
       </div>
 
-  </section>
+    </section>
 
-  <!-- section menu mobile -->
+    <!-- section menu mobile -->
 
-  <section class="menu-media">
+    <section class="menu-media">
 
-    <div class="menu-content">
+      <div class="menu-content">
 
-      <div class="name">ALLEN GORDON</div>
+        <div class="name">ALLEN GORDON</div>
 
-      <div class="icon"><a href="#"><img src="./img/menu-media.png"/></a></div>
+        <div class="icon">
+          <a href="#"><img src="./img/menu-media.png" /></a>
+        </div>
 
-    </div>
+      </div>
 
-  </section>
+    </section>
 
     <ul class="menu-click">
-        <a href="#home"><li href="#home">HOME</li></a>
-        <a href="#about-me"><li href="#about-me">ABOUT ME</li></a>
-        <a href="#portfolio"><li href="#portfolio">PORTFOLIO</li></a>
-        <a href="#contact"><li href="#contact">CONTACT</li></a>
+      <a href="#home">
+        <li href="#home">HOME</li>
+      </a>
+      <a href="#about-me">
+        <li href="#about-me">ABOUT ME</li>
+      </a>
+      <a href="#portfolio">
+        <li href="#portfolio">PORTFOLIO</li>
+      </a>
+      <a href="#contact">
+        <li href="#contact">CONTACT</li>
+      </a>
 
     </ul>
 
 
-  <!-- section menu -->
+    <!-- section menu -->
 
-  <section class="menu">
+    <section class="menu">
 
-    <div class="menu-content">
+      <div class="menu-content">
 
-    <div class="name">Allen Gordon</div>
+        <div class="name">ALLEN GORDON</div>
 
-      <ul id="menu">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#about-me">ABOUT ME</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
-    </div>
-
-
-  </section>
-
-
-  <!-- section about me -->
-
-  <section class="about-me" id="about-me">
-
-  <div class="content">
-
-    <h1>ABOUT ME</h1>
-    <hr/>
-    <p class="bio">I am a fullstack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br>
-    Before getting into programming I was a residential real estate broker for many years. I was always into computers and technology, and finally decided to make a career change.<br>
-    I frequently use React/Redux, Node.js/Express, MongoDB, and PostgreSQL to build web applications. I've also dabbled with Python and Django. I look forward to a lifetime of learning in computer engineering.</p>
-    <a href="http://bit.ly/2opQRCN" target="_blank"><div class="hover-button">RESUME</div></a>
-    <hr>
-    <div class="skills">
-        <h2>SKILLS</h2>
-        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django</p>
-            <div class="languages">
-              <div class="circle" id="javascript"></div>
-              <div class="circle" id="express"></div>
-              <div class="circle" id="node"></div>
-              <div class="circle" id="react"></div>
-              <div class="circle" id="redux"></div>
-              <div class="circle" id="mongodb"></div>
-              <div class="circle" id="postgresql"></div>
-              <div class="circle" id="mocha"></div>
-              <div class="circle" id="python"></div>
-              <div class="circle" id="django"></div>
-        </div>
+        <ul id="menu">
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#about-me">ABOUT ME</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
       </div>
 
-  </div>
-  </section>
 
-  <div class="clear"></div>
+    </section>
 
 
-  <!-- portoflio-->
+    <!-- section about me -->
 
-  <section class="portfolio" id="portfolio">
+    <section class="about-me" id="about-me">
+
+      <div class="content">
+
+        <h1>ABOUT ME</h1>
+        <hr/>
+        <p class="bio">I am a fullstack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a residential real estate broker for many years. I was
+          always into computers and technology, and finally decided to make a career change.<br> I frequently use React/Redux, Node.js/Express, MongoDB, and PostgreSQL to build web applications. I've also dabbled with Python and Django. I look forward
+          to a lifetime of learning in computer engineering.</p>
+        <a href="http://bit.ly/2opQRCN" target="_blank">
+          <div class="hover-button">RESUME</div>
+        </a>
+        <hr>
+        <div class="skills">
+          <h2>SKILLS</h2>
+          <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django</p>
+          <div class="languages">
+            <div class="circle" id="javascript"></div>
+            <div class="circle" id="express"></div>
+            <div class="circle" id="node"></div>
+            <div class="circle" id="react"></div>
+            <div class="circle" id="redux"></div>
+            <div class="circle" id="mongodb"></div>
+            <div class="circle" id="postgresql"></div>
+            <div class="circle" id="mocha"></div>
+            <div class="circle" id="python"></div>
+            <div class="circle" id="django"></div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <div class="clear"></div>
 
 
-    <div class="portfolio-margin">
+    <!-- portoflio-->
 
-      <h1>PORTFOLIO</h1>
-      <hr/>
+    <section class="portfolio" id="portfolio">
+
+
+      <div class="portfolio-margin">
+
+        <h1>PORTFOLIO</h1>
+        <hr/>
 
         <div class="grid">
 
-              <div class="text">
-                <p>Recipe Box</p>
-                <p class="description">A recipe search app with personal ratings</p>
-              </div>
-              <div class="grid-box">
-                  <a href="https://recipe-box-fullstack.herokuapp.com/" target="_blank"><img src="./img/portfolio/Recipe-Box_Screenshot-Main.png" alt="Recipe Box" /></a>
-            </div>
-              <hr>
-              <div class="text">
-                <p>Sixty-Six Days</p>
-                <p class="description">A goal-setting app with calendar reminders</p>
-            </div>
-            <div class="grid-box">
-                <a href="https://sixty-six-days.herokuapp.com/" target="_blank"><img src="./img/portfolio/Sixty-Six-Days_Screenshot-Main.png" alt="Sixty-Six Days" /></a>
-            </div>
+          <div class="text">
+            <p>Recipe Box</p>
+            <p class="description">A recipe search app with personal ratings</p>
+          </div>
+          <div class="grid-box">
+            <a href="https://recipe-box-fullstack.herokuapp.com/" target="_blank"><img src="./img/portfolio/Recipe-Box_Screenshot-Main.png" alt="Recipe Box" /></a>
+          </div>
+          <hr>
+          <div class="text">
+            <p>Sixty-Six Days</p>
+            <p class="description">A goal-setting app with calendar reminders</p>
+          </div>
+          <div class="grid-box">
+            <a href="https://sixty-six-days.herokuapp.com/" target="_blank"><img src="./img/portfolio/Sixty-Six-Days_Screenshot-Main.png" alt="Sixty-Six Days" /></a>
+          </div>
 
-            <hr>
-              <div class="text">
-                <p>Stock Saver</p>
-                <p class="description">A stock search app with user account management</p>
-            </div>
-            <div class="grid-box">
-                <a href="https://node-capstone-stock-saver.herokuapp.com/" target="_blank"><img src="./img/portfolio/Stock-Saver-Homepage.png" alt="Stock Saver" /></a>
-            </div>
+          <hr>
+          <div class="text">
+            <p>Stock Saver</p>
+            <p class="description">A stock search app with user account management</p>
+          </div>
+          <div class="grid-box">
+            <a href="https://node-capstone-stock-saver.herokuapp.com/" target="_blank"><img src="./img/portfolio/Stock-Saver-Homepage.png" alt="Stock Saver" /></a>
+          </div>
 
-            <hr>
-              <div class="text">
-                <p>Chuck Norris Punch Lines</p>
-                <p class="description">A fun app that fetches random Chuck Norris jokes</p>
-            </div>
-            <div class="grid-box">
-                <a href="https://trig010.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
-            </div>
+          <hr>
+          <div class="text">
+            <p>Chuck Norris Punch Lines</p>
+            <p class="description">A fun app that fetches random Chuck Norris jokes</p>
+          </div>
+          <div class="grid-box">
+            <a href="https://trig010.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
+          </div>
 
         </div>
 
-   </div>
+      </div>
 
 
-   </section>
-   <div class="clear"></div>
+    </section>
+    <div class="clear"></div>
 
 
     <!-- Contact-->
 
     <section class="contact" id="contact">
-        <h1>Contact</h1>
-        <hr/>
-        <div class="content">
+      <h1>Contact</h1>
+      <hr/>
+      <div class="content">
 
-          <p class="contact-text">
+        <p class="contact-text">
 
           If you’d like to know more, or to discuss any opportunities, please don’t hesitate to reach out.<br/><br/>
 
-          <strong>Allen Gordon</strong><br/>
+          <strong>Allen Gordon</strong><br/> e-mail: <strong><a href="mailto:trig.code@gmail.com">trig.code@gmail.com</a></strong>
 
-          e-mail: <strong><a href="mailto:trig.code@gmail.com">trig.code@gmail.com</a></strong>
-
-      </p>
+        </p>
       </div>
 
-             <div class="thank-you">
+      <div class="thank-you">
 
-                 <h3>Thank you for visiting my portfolio!</h3>
+        <h3>Thank you for visiting my portfolio!</h3>
 
-             </div>
+      </div>
     </section>
 
 
     <section class="footer">
 
 
-        <div class="menu-footer">
+      <div class="menu-footer">
 
-            <a href="#home">Home</a>
-            <br><br>
-            <a  href="http://www.linkedin.com/in/trig010" target="_blank"><img class="footer-logo" src="./img/logos/In-2CRev-75px-R.png"></a>
-            <a href="http://www.github.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Octocat.png"></a>
-            <a href="http://www.twitter.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Twitter_Logo_White_On_Image.svg"></a>
+        <a href="#home">Home</a>
+        <br><br>
+        <a href="http://www.linkedin.com/in/trig010" target="_blank"><img class="footer-logo" src="./img/logos/In-2CRev-75px-R.png"></a>
+        <a href="http://www.github.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Octocat.png"></a>
+        <a href="http://www.twitter.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Twitter_Logo_White_On_Blue.png"></a>
 
-        </div>
+      </div>
 
 
-        <div class="copyright">© 2017. All Rights Reserved trig010.com</div>
+      <div class="copyright">© 2017. All Rights Reserved trig010.com</div>
 
 
     </section>
 
 
-</div>
+  </div>
 
 
+  <!-- Scripts -->
 
-	<!-- Scripts -->
+  <script src="./js/jquery-1.11.0.min.js" type="text/javascript"></script>
+  <script src="./js/jquery-ui-1.10.4.min.js" type="text/javascript"></script>
+  <!-- jQuery -->
 
-	<script src="./js/jquery-1.11.0.min.js" type="text/javascript"></script>
-	<script src="./js/jquery-ui-1.10.4.min.js" type="text/javascript"></script>
-    <!-- jQuery -->
-	<script src="./js/jquery.nicescroll.js"></script>
-    <!-- jQuery NiceScroll -->
-	<script src="./js/jquery.sticky.js"></script>
-    <!-- jQuery Stick Menu -->
+  <script src="./js/jquery.nicescroll.js"></script>
+  <!-- jQuery NiceScroll -->
 
-	<script src="./js/imagesloaded.pkgd.min.js"></script>
-    <!-- All script -->
+  <script src="./js/sticky-menu.js"></script>
+  <!-- Sticky Menu -->
 
-	<script src="./js/jquery.parallax.js"></script>
-    <!-- jQuery Parallax -->
-	<script src="./js/script.js"></script>
-    <!-- All script -->
+  <script src="./js/imagesloaded.pkgd.min.js"></script>
+  <!-- imagesLoaded -->
+
+  <script src="./js/jquery.parallax.js"></script>
+  <!-- jQuery Parallax -->
+
+  <script src="./js/script.js"></script>
+  <!-- All script -->
 
 
 </body>
