working on responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
           <h1>ALLEN GORDON</h1>
           <h2>Fullstack Computer Engineer</h2>
           <div><img class="start-page-logo" src="./img/brackets.png"></div>
-          <a href="#about-me">
-            <div class="hover-button">About Me</div>
+          <a href="#portfolio">
+            <div class="hover-button">PORTFOLIO</div>
           </a>
 
         </div>
@@ -76,16 +76,15 @@
       <a href="#home">
         <li href="#home">HOME</li>
       </a>
-      <a href="#about-me">
-        <li href="#about-me">ABOUT ME</li>
-      </a>
       <a href="#portfolio">
         <li href="#portfolio">PORTFOLIO</li>
+      </a>
+      <a href="#about-me">
+        <li href="#about-me">ABOUT ME</li>
       </a>
       <a href="#contact">
         <li href="#contact">CONTACT</li>
       </a>
-
     </ul>
 
 
@@ -99,8 +98,8 @@
 
         <ul id="menu">
           <li><a href="#home">HOME</a></li>
-          <li><a href="#about-me">ABOUT ME</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#about-me">ABOUT ME</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
@@ -108,46 +107,7 @@
 
     </section>
 
-
-    <!-- section about me -->
-
-    <section class="about-me" id="about-me">
-
-      <div class="content">
-
-        <h1>ABOUT ME</h1>
-        <hr/>
-        <p class="bio">I am a fullstack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a residential real estate broker for many years. I was
-          always into computers and technology, and finally decided to make a career change.<br> I frequently use React/Redux, Node.js/Express, MongoDB, and PostgreSQL to build web applications. I've also dabbled with Python and Django. I look forward
-          to a lifetime of learning in computer engineering.</p>
-        <a href="http://bit.ly/2opQRCN" target="_blank">
-          <div class="hover-button">RESUME</div>
-        </a>
-        <hr>
-        <div class="skills">
-          <h2>SKILLS</h2>
-          <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django</p>
-          <div class="languages">
-            <div class="circle" id="javascript"></div>
-            <div class="circle" id="express"></div>
-            <div class="circle" id="node"></div>
-            <div class="circle" id="react"></div>
-            <div class="circle" id="redux"></div>
-            <div class="circle" id="mongodb"></div>
-            <div class="circle" id="postgresql"></div>
-            <div class="circle" id="mocha"></div>
-            <div class="circle" id="python"></div>
-            <div class="circle" id="django"></div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <div class="clear"></div>
-
-
-    <!-- portoflio-->
+    <!-- portfolio-->
 
     <section class="portfolio" id="portfolio">
 
@@ -160,34 +120,48 @@
         <div class="grid">
 
           <div class="text">
+            <p>Sixty-Six Days</p>
+            <ul class="description">
+            <li>Description: A goal-setting app with calendar reminders.</li>
+            <li>Technologies: Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
+            <li><a href="https://github.com/trig010/sixty-six-days" target="_blank">GitHub Repository: github.com/trig010/sixty-six-days</a></li>
+          </ul>
+          </div>
+          <div class="grid-box">
+            <a href="https://sixty-six-days.herokuapp.com/" target="_blank"><img src="./img/portfolio/Sixty-Six-Days_Screenshot-Main.png" alt="Sixty-Six Days" /></a>
+          </div>
+          <hr>
+          <div class="text">
             <p>Recipe Box</p>
-            <p class="description">A recipe search app with personal ratings</p>
+            <ul class="description">
+            <li>Description: A recipe search app with personal ratings.</li>
+            <li>Technologies: Node, Express, React, Redux, MongoDB/Mongoose.</li>
+            <li><a href="https://github.com/trig010/recipe-box" target="_blank">GitHub Repository: github.com/trig010/recipe-box</a></li>
+            </ul>
           </div>
           <div class="grid-box">
             <a href="https://recipe-box-fullstack.herokuapp.com/" target="_blank"><img src="./img/portfolio/Recipe-Box_Screenshot-Main.png" alt="Recipe Box" /></a>
           </div>
           <hr>
           <div class="text">
-            <p>Sixty-Six Days</p>
-            <p class="description">A goal-setting app with calendar reminders</p>
-          </div>
-          <div class="grid-box">
-            <a href="https://sixty-six-days.herokuapp.com/" target="_blank"><img src="./img/portfolio/Sixty-Six-Days_Screenshot-Main.png" alt="Sixty-Six Days" /></a>
-          </div>
-
-          <hr>
-          <div class="text">
             <p>Stock Saver</p>
-            <p class="description">A stock search app with user account management</p>
+            <ul class="description">
+            <li>Description: A stock search app with user account management.</li>
+            <li>Technologies: Node, Express, jQuery, Passport,  MongoDB/Mongoose.</li>
+            <li><a href="https://github.com/trig010/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/trig010/node-capstone-stock-saver</a></li>
+            </ul>
           </div>
           <div class="grid-box">
             <a href="https://node-capstone-stock-saver.herokuapp.com/" target="_blank"><img src="./img/portfolio/Stock-Saver-Homepage.png" alt="Stock Saver" /></a>
           </div>
-
           <hr>
           <div class="text">
             <p>Chuck Norris Punch Lines</p>
-            <p class="description">A fun app that fetches random Chuck Norris jokes</p>
+            <ul class="description">
+            <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
+            <li>Technologies: JavaScript, Express, jQuery, HTML and CSS.</li>
+            <li><a href="https://github.com/trig010/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/trig010/chuck-norris-punch-lines</a></li>
+            </ul>
           </div>
           <div class="grid-box">
             <a href="https://trig010.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
@@ -200,6 +174,44 @@
 
     </section>
     <div class="clear"></div>
+
+
+
+  <!-- section about me -->
+
+  <section class="about-me" id="about-me">
+
+    <div class="content">
+
+      <h1>ABOUT ME</h1>
+      <hr/>
+      <p class="bio">I am a full stack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a marketing director for realtors, and a residential real estate broker myself. I have always been interested in computers and technology, and finally decided last year to make software my career.<br> I frequently use React/Redux, Node.js/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django. I look forward to learning new languages and frameworks!</p>
+      <a href="http://bit.ly/2opQRCN" target="_blank">
+        <div class="hover-button">RESUME</div>
+      </a>
+      <hr>
+      <div class="skills">
+        <h2>TECHNOLOGY SKILLS</h2>
+        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django</p>
+        <div class="languages">
+          <div class="circle" id="javascript"></div>
+          <div class="circle" id="express"></div>
+          <div class="circle" id="node"></div>
+          <div class="circle" id="react"></div>
+          <div class="circle" id="redux"></div>
+          <div class="circle" id="mongodb"></div>
+          <div class="circle" id="postgresql"></div>
+          <div class="circle" id="mocha"></div>
+          <div class="circle" id="python"></div>
+          <div class="circle" id="django"></div>
+        </div>
+        <p>Note: this is not a complete list of my software experience.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <div class="clear"></div>
 
 
     <!-- Contact-->
