--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,6 @@
 
       </div>
 
-    </section>
 
     <ul class="menu-click">
       <a href="#home">
@@ -87,6 +86,7 @@
       </a>
     </ul>
 
+  </section>
 
     <!-- section menu -->
 
@@ -185,10 +185,11 @@
 
       <h1>ABOUT ME</h1>
       <hr/>
-      <p class="bio">I am a full stack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a marketing director for realtors, and a residential real estate broker myself. I have always been interested in computers and technology, and finally decided last year to make software my career.<br> I frequently use React/Redux, Node.js/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django. I look forward to learning new languages and frameworks!</p>
-      <a href="http://bit.ly/2opQRCN" target="_blank">
+      <a href="https://drive.google.com/file/d/0B73djAI7KWwiVEs4U1RnU0Jtdlk/view?usp=sharing" target="_blank">
         <div class="hover-button">RESUME</div>
       </a>
+      <p class="bio">I am a full stack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a marketing director for realtors, and a residential real estate broker myself. I have always been interested in computers and technology, and finally decided last year to make software my career.<br> I frequently use React/Redux, Node.js/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django. I look forward to learning new languages and frameworks!</p>
+
       <hr>
       <div class="skills">
         <h2>TECHNOLOGY SKILLS</h2>
