updated and added screenshot

--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,9 @@
           <div class="text">
             <p>Sixty-Six Days</p>
             <ul class="description">
-            <li>Description: A goal-setting app with calendar reminders.</li>
-            <li>Technologies: Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
+            <li>Description: A goal-setting app with calendar reminders. </li>
+            <li>Purpose: Designed to help the user set and achieve new, positive goals.  </li>
+            <li>Technologies: Built using Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
             <li><a href="https://github.com/trig010/sixty-six-days" target="_blank">GitHub Repository: github.com/trig010/sixty-six-days</a></li>
           </ul>
           </div>
@@ -134,8 +135,9 @@
           <div class="text">
             <p>Recipe Box</p>
             <ul class="description">
-            <li>Description: A recipe search app with personal ratings.</li>
-            <li>Technologies: Node, Express, React, Redux, MongoDB/Mongoose.</li>
+            <li>Description: A recipe search app with personal ratings. </li>
+            <li>Purpose: Pulls recipes from multiple sources and provides a single channel for the user to save and rate their favorites.</li>
+            <li>Technologies: Built using Node, Express, React, Redux, MongoDB/Mongoose.</li>
             <li><a href="https://github.com/trig010/recipe-box" target="_blank">GitHub Repository: github.com/trig010/recipe-box</a></li>
             </ul>
           </div>
@@ -147,7 +149,8 @@
             <p>Stock Saver</p>
             <ul class="description">
             <li>Description: A stock search app with user account management.</li>
-            <li>Technologies: Node, Express, jQuery, Passport,  MongoDB/Mongoose.</li>
+            <li>Purpose: Demonstrates direct feedback to the user when inputs are submitted incorrectly.</li>
+            <li>Technologies: Built using Node, Express, jQuery, Passport,  MongoDB/Mongoose.</li>
             <li><a href="https://github.com/trig010/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/trig010/node-capstone-stock-saver</a></li>
             </ul>
           </div>
@@ -159,7 +162,8 @@
             <p>Chuck Norris Punch Lines</p>
             <ul class="description">
             <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
-            <li>Technologies: JavaScript, Express, jQuery, HTML and CSS.</li>
+            <li>Purpose: Because everyone appreciates a good laugh!</li>
+            <li>Technologies: Built using JavaScript, Express, jQuery, HTML and CSS.</li>
             <li><a href="https://github.com/trig010/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/trig010/chuck-norris-punch-lines</a></li>
             </ul>
           </div>
@@ -188,7 +192,7 @@
       <a href="https://drive.google.com/file/d/0B73djAI7KWwiVEs4U1RnU0Jtdlk/view?usp=sharing" target="_blank">
         <div class="hover-button">RESUME</div>
       </a>
-      <p class="bio">I am a full stack computer engineer looking for work in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a marketing director for realtors, and a residential real estate broker myself. I have always been interested in computers and technology, and finally decided last year to make software my career.<br> I frequently use React/Redux, Node.js/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django. I look forward to learning new languages and frameworks!</p>
+      <p class="bio">I am a full stack computer engineer in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a Marketing Director for Realtors, and a residential real estate broker as well. Our team sold in excess of $600 million in residential real estate within 10 years! I especially enjoyed the design and technological aspects of my marketing work, and decided last year to make software development my full-time career.<br> I frequently use React/Redux, Node/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django.</p>
 
       <hr>
       <div class="skills">
@@ -224,7 +228,7 @@
 
         <p class="contact-text">
 
-          If you’d like to know more, or to discuss any opportunities, please don’t hesitate to reach out.<br/><br/>
+          If you’d like to know more, or to discuss any opportunities, please don’t hesitate to reach out. I look forward to speaking with you soon!<br/><br/>
 
           <strong>Allen Gordon</strong><br/> e-mail: <strong><a href="mailto:trig.code@gmail.com">trig.code@gmail.com</a></strong>
 
