--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
             <li>Description: A goal-setting app with calendar reminders. </li>
             <li>Purpose: Designed to help the user set and achieve new, positive goals.  </li>
             <li>Technologies: Built using Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/trig010/sixty-six-days" target="_blank">GitHub Repository: github.com/trig010/sixty-six-days</a></li>
+            <li><a href="https://github.com/allengordon011/sixty-six-days" target="_blank">GitHub Repository: github.com/allengordon011/sixty-six-days</a></li>
           </ul>
           </div>
           <div class="grid-box">
@@ -138,7 +138,7 @@
             <li>Description: A recipe search app with personal ratings. </li>
             <li>Purpose: Pulls recipes from multiple sources and provides a single channel for the user to save and rate their favorites.</li>
             <li>Technologies: Built using Node, Express, React, Redux, MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/trig010/recipe-box" target="_blank">GitHub Repository: github.com/trig010/recipe-box</a></li>
+            <li><a href="https://github.com/allengordon011/recipe-box" target="_blank">GitHub Repository: github.com/allengordon011/recipe-box</a></li>
             </ul>
           </div>
           <div class="grid-box">
@@ -151,7 +151,7 @@
             <li>Description: A stock search app with user account management.</li>
             <li>Purpose: Demonstrates direct feedback to the user when inputs are submitted incorrectly.</li>
             <li>Technologies: Built using Node, Express, jQuery, Passport,  MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/trig010/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/trig010/node-capstone-stock-saver</a></li>
+            <li><a href="https://github.com/allengordon011/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/allengordon011/node-capstone-stock-saver</a></li>
             </ul>
           </div>
           <div class="grid-box">
@@ -164,11 +164,11 @@
             <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
             <li>Purpose: Because everyone appreciates a good laugh!</li>
             <li>Technologies: Built using JavaScript, Express, jQuery, HTML and CSS.</li>
-            <li><a href="https://github.com/trig010/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/trig010/chuck-norris-punch-lines</a></li>
+            <li><a href="https://github.com/allengordon011/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/allengordon011/chuck-norris-punch-lines</a></li>
             </ul>
           </div>
           <div class="grid-box">
-            <a href="https://trig010.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
+            <a href="https://allengordon011.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
           </div>
 
         </div>
@@ -189,10 +189,12 @@
 
       <h1>ABOUT ME</h1>
       <hr/>
-      <a href="https://drive.google.com/file/d/0B73djAI7KWwiVEs4U1RnU0Jtdlk/view?usp=sharing" target="_blank">
+      <a href="https://drive.google.com/open?id=0B73djAI7KWwiOUx6SGh2NWtrRE0">
         <div class="hover-button">RESUME</div>
       </a>
-      <p class="bio">I am a full stack computer engineer in Chicago. I love the challenge of developing new apps and learning new tools and frameworks. <br> Before getting into programming I was a Marketing Director for Realtors, and a residential real estate broker as well. Our team sold in excess of $600 million in residential real estate within 10 years! I especially enjoyed the design and technological aspects of my marketing work, and decided last year to make software development my full-time career.<br> I frequently use React/Redux, Node/Express, and MongoDB to build web applications. I've also worked with PostgreSQL, Python and Django.</p>
+      <p class="bio">I am a full stack developer in Chicago experienced primarily with the JavaScript MERN stack: MongoDB,  Express, React/Redux, and Node. I have also coded with PostgreSQL, Python and Django. <br>
+      Before getting into programming I was a Marketing Director for Realtors, as well as a Real Estate Broker myself. I was a key contributor to our team's growth with over $600 million in sales within 10 years.<br>
+      I especially enjoyed the design and technological aspects of my marketing work, and decided last year to make software development my full-time career. I love the challenges of developing new apps and learning new tools and frameworks.</p>
 
       <hr>
       <div class="skills">
@@ -230,7 +232,7 @@
 
           If you’d like to know more, or to discuss any opportunities, please don’t hesitate to reach out. I look forward to speaking with you soon!<br/><br/>
 
-          <strong>Allen Gordon</strong><br/> e-mail: <strong><a href="mailto:trig.code@gmail.com">trig.code@gmail.com</a></strong>
+          <strong>Allen Gordon</strong><br/> e-mail: <strong><a href="mailto:allengordon011@gmail.com">allengordon011@gmail.com</a></strong>
 
         </p>
       </div>
@@ -250,9 +252,9 @@
 
         <a href="#home">Home</a>
         <br><br>
-        <a href="http://www.linkedin.com/in/trig010" target="_blank"><img class="footer-logo" src="./img/logos/In-2CRev-75px-R.png"></a>
-        <a href="http://www.github.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Octocat.png"></a>
-        <a href="http://www.twitter.com/trig010" target="_blank"><img class="footer-logo" src="./img/logos/Twitter_Logo_White_On_Blue.png"></a>
+        <a href="http://www.linkedin.com/in/allengordon011" target="_blank"><img class="footer-logo" src="./img/logos/In-2CRev-75px-R.png"></a>
+        <a href="http://www.github.com/allengordon011" target="_blank"><img class="footer-logo" src="./img/logos/Octocat.png"></a>
+        <a href="http://www.twitter.com/allengordon011" target="_blank"><img class="footer-logo" src="./img/logos/Twitter_Logo_White_On_Blue.png"></a>
 
       </div>
 
