--- a/public/index.html
+++ b/public/index.html
@@ -189,17 +189,17 @@
 
       <h1>ABOUT ME</h1>
       <hr/>
-      <a href="https://drive.google.com/open?id=0B73djAI7KWwiOUx6SGh2NWtrRE0">
+      <a href="https://drive.google.com/open?id=0B27GaqUCiSiNaER1QTJrMFBBb2M">
         <div class="hover-button">RESUME</div>
       </a>
-      <p class="bio">I am a full stack developer in Chicago experienced primarily with the JavaScript MERN stack: MongoDB,  Express, React/Redux, and Node. I have also coded with PostgreSQL, Python and Django. <br>
-      Before getting into programming I was a Marketing Director for Realtors, as well as a Real Estate Broker myself. I was a key contributor to our team's growth with over $600 million in sales within 10 years.<br>
-      I especially enjoyed the design and technological aspects of my marketing work, and decided last year to make software development my full-time career. I love the challenges of developing new apps and learning new tools and frameworks.</p>
+      <p class="bio">I am a full stack developer (front end and back end) experienced with the JavaScript MERN stack: MongoDB, Express, React/Redux, and Node; and more. I am proficient at building RESTful APIs, using both SQL and noSQL databases, agile development with paired programming, source/version control, CI, and TDD.<br>
+      I love the challenges of developing new apps and learning new tools and frameworks. I am currently studying Ruby, Ruby on Rails, and Python in my spare time.
+    </p>
 
       <hr>
       <div class="skills">
         <h2>TECHNOLOGY SKILLS</h2>
-        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django</p>
+        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django, Ruby, Rails</p>
         <div class="languages">
           <div class="circle" id="javascript"></div>
           <div class="circle" id="express"></div>
