added Stock Ticker

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
   <title>Portfolio by Allen Gordon</title>
 
-  <meta name="description" content="Software engineer portfolio of work" />
-  <meta name="keywords" content="software engineer, chicago" />
+  <meta name="description" content="Web developer and software engineer portfolio of work" />
+  <meta name="keywords" content="web developer, software engineer, full stack, front end, back end, node, react, redux, express, mongodb, postgresql, sqlite, python, flask, chicago" />
   <meta name="author" content="trig010.com" />
 
   <link rel="shortcut icon" href="./img/favicon.ico">
@@ -43,7 +43,7 @@
 
 
           <h1>ALLEN GORDON</h1>
-          <h2>Fullstack Computer Engineer</h2>
+          <h2>Web Developer and Full Stack Software Engineer</h2>
           <div><img class="start-page-logo" src="./img/brackets.png"></div>
           <a href="#portfolio">
             <div class="hover-button">PORTFOLIO</div>
@@ -120,40 +120,63 @@
         <div class="grid">
 
           <div class="text">
-            <p>Sixty-Six Days</p>
+            <h2>Sixty-Six Days</h2>
             <ul class="description">
-            <li>Description: A goal-setting app with calendar reminders. </li>
-            <li>Purpose: Designed to help the user set and achieve new, positive goals.  </li>
-            <li>Technologies: Built using Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/allengordon011/sixty-six-days" target="_blank">GitHub Repository: github.com/allengordon011/sixty-six-days</a></li>
+              <li>Description: A goal-setting app with calendar reminders. </li>
+              <li>Purpose: Designed to help the user set and achieve new, positive goals.  </li>
+              <li>Technologies: Built using Node, Express, React, Redux, Passport, MongoDB/Mongoose.</li>
+              <li>
+                <a href="https://github.com/allengordon011/sixty-six-days" target="_blank">GitHub Repository: github.com/allengordon011/sixty-six-days</a>
+              </li>
           </ul>
           </div>
+          <p class="screenshot-header">Click the image below for a live demonstration</p>
           <div class="grid-box">
             <a href="https://sixty-six-days.herokuapp.com/" target="_blank"><img src="./img/portfolio/Sixty-Six-Days_Screenshot-Main.png" alt="Sixty-Six Days" /></a>
           </div>
           <hr>
           <div class="text">
-            <p>Recipe Box</p>
+            <h2>Recipe Box</h2>
             <ul class="description">
-            <li>Description: A recipe search app with personal ratings. </li>
-            <li>Purpose: Pulls recipes from multiple sources and provides a single channel for the user to save and rate their favorites.</li>
-            <li>Technologies: Built using Node, Express, React, Redux, MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/allengordon011/recipe-box" target="_blank">GitHub Repository: github.com/allengordon011/recipe-box</a></li>
+              <li>Description: A recipe search app with personal ratings. </li>
+              <li>Purpose: Pulls recipes from multiple sources and provides a single channel for the user to save and rate their favorites.</li>
+              <li>Technologies: Built using Node, Express, React, Redux, and MongoDB/Mongoose.</li>
+              <li>
+                <a href="https://github.com/allengordon011/recipe-box" target="_blank">GitHub Repository: github.com/allengordon011/recipe-box</a>
+              </li>
             </ul>
           </div>
+          <p class="screenshot-header">Click the image below for a live demonstration</p>                          
           <div class="grid-box">
             <a href="https://recipe-box-fullstack.herokuapp.com/" target="_blank"><img src="./img/portfolio/Recipe-Box_Screenshot-Main.png" alt="Recipe Box" /></a>
           </div>
           <hr>
           <div class="text">
-            <p>Stock Saver</p>
+            <h2>Stock Ticker</h2>
             <ul class="description">
-            <li>Description: A stock search app with user account management.</li>
-            <li>Purpose: Demonstrates direct feedback to the user when inputs are submitted incorrectly.</li>
-            <li>Technologies: Built using Node, Express, jQuery, Passport,  MongoDB/Mongoose.</li>
-            <li><a href="https://github.com/allengordon011/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/allengordon011/node-capstone-stock-saver</a></li>
+              <li>Description: A stock ticker app that refreshes quotes every 30 seconds.</li>
+              <li>Purpose: An example of a Python back end using Flask/SQLalchemy and a SQLite database.</li>
+              <li>Technologies: Built using Python, JavaScript, jQuery, and SQLite.</li>
+              <li>
+                <a href="https://github.com/allengordon011/stock_ticker" target="_blank">GitHub Repository: github.com/allengordon011/stock_ticker</a>
+              </li>
             </ul>
           </div>
+          <div class="grid-box">
+            <img src="./img/portfolio/Stock_Ticker-Homepage.png" alt="Stock Ticker" /></a>
+          </div><hr>
+          <div class="text">
+            <h2>Stock Saver</h2>
+            <ul class="description">
+              <li>Description: A stock search app with user account management.</li>
+              <li>Purpose: Demonstrates user authentication using PassportJS and a RESTful API.</li>
+              <li>Technologies: Built using Node, Express, jQuery, Passport, and MongoDB/Mongoose.</li>
+              <li>
+                <a href="https://github.com/allengordon011/node-capstone-stock-saver" target="_blank">GitHub Repository: github.com/allengordon011/node-capstone-stock-saver</a>
+              </li>
+            </ul>
+          </div>
+          <p class="screenshot-header">Click the image below for a live demonstration</p>
           <div class="grid-box">
             <a href="https://node-capstone-stock-saver.herokuapp.com/" target="_blank"><img src="./img/portfolio/Stock-Saver-Homepage.png" alt="Stock Saver" /></a>
           </div>
@@ -161,12 +184,15 @@
           <div class="text">
             <p>Chuck Norris Punch Lines</p>
             <ul class="description">
-            <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
-            <li>Purpose: Because everyone appreciates a good laugh!</li>
-            <li>Technologies: Built using JavaScript, Express, jQuery, HTML and CSS.</li>
-            <li><a href="https://github.com/allengordon011/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/allengordon011/chuck-norris-punch-lines</a></li>
+              <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
+              <li>Purpose: Because everyone appreciates a good laugh!</li>
+              <li>Technologies: Built using JavaScript, Express, jQuery, HTML and CSS.</li>
+              <li>
+                <a href="https://github.com/allengordon011/chuck-norris-punch-lines" target="_blank">GitHub Repository: github.com/allengordon011/chuck-norris-punch-lines</a>
+              </li>
             </ul>
           </div>
+          <p class="screenshot-header">Click the image below for a live demonstration</p>
           <div class="grid-box">
             <a href="https://allengordon011.github.io/chuck-norris-punch-lines/" target="_blank"><img src="./img/portfolio/Chuck-Screen-Shot.png" alt="Chuck Norris Punch Lines" /></a>
           </div>
@@ -192,14 +218,14 @@
       <a href="https://drive.google.com/open?id=0B27GaqUCiSiNaER1QTJrMFBBb2M">
         <div class="hover-button">RESUME</div>
       </a>
-      <p class="bio">I am a full stack developer (front end and back end) experienced with the JavaScript MERN stack: MongoDB, Express, React/Redux, and Node; and more. I am proficient at building RESTful APIs, using both SQL and noSQL databases, agile development with paired programming, source/version control, CI, and TDD.<br>
+      <p class="bio">I am a full stack web developer (front end and back end) experienced with the JavaScript MERN stack: MongoDB, Express, React/Redux, and Node; and more. I am proficient at building RESTful APIs, using both SQL and noSQL databases, agile development with paired programming, source/version control, continuous integration (CI), and test-driven development (TDD).<br>
       I love the challenges of developing new apps and learning new tools and frameworks. I am currently studying Ruby, Ruby on Rails, and Python in my spare time.
     </p>
 
       <hr>
       <div class="skills">
         <h2>TECHNOLOGY SKILLS</h2>
-        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, Mocha/Chai, Python, Django, Ruby, Rails</p>
+        <p>JavaScript, Express.js, Node.js, React, Redux, MongoDB/Mongoose, PostgreSQL, SQLite, Mocha/Chai, Python, Flask, Django, Ruby, Rails</p>
         <div class="languages">
           <div class="circle" id="javascript"></div>
           <div class="circle" id="express"></div>
