updated responsive styling

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
 
           <h1>ALLEN GORDON</h1>
-          <h2>Web Developer and Full Stack Software Engineer</h2>
+          <h3>Web Developer and Full Stack Software Engineer</h3>
           <div><img class="start-page-logo" src="./img/brackets.png"></div>
           <a href="#portfolio">
             <div class="hover-button">PORTFOLIO</div>
@@ -182,7 +182,7 @@
           </div>
           <hr>
           <div class="text">
-            <p>Chuck Norris Punch Lines</p>
+            <h2>Chuck Norris Punch Lines</h2>
             <ul class="description">
               <li>Description: A playful app that fetches random Chuck Norris jokes.</li>
               <li>Purpose: Because everyone appreciates a good laugh!</li>
